# openai-compitable-mcp-client

./: .env  README.md  client.py  config.json  pyproject.toml
servers/: simple_add.py
