[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.400",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "httpx[socks]>=0.28.1",
    "matplotlib>=3.10.1",
    "mcp>=1.6.0",
    "mcp-server-fetch>=2025.1.17",
    "openai>=1.69.0",
    "pip>=25.0.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
